# Gart

./: .gitignore  CMakeLists.txt  INSTRUCTION_Denoiser_cn.md  INSTRUCTION_cn.md  README.md  imgui.ini
notes/: INSTRUCTION_cn.md
scenes/: box.json  cornell origin.json  cornell.json  cornell_cone.json  cornell_dielectric.json  nee.json  quad_light.json
scenes/meshes/: Cone.glb  bunny.gltf
src/: denoise.cu  denoise.h  image.cpp  image.h  interactions.cu  interactions.h  intersections.cu  intersections.h  main.cpp  main.h  mipmap.h  onb.cu  pathtrace.cu  pathtrace.h  preview.cpp  random.h  scene.cpp  scene.h  sceneStructs.h  stb.cpp  stb_image.h  texture.h  utilities.cpp  utilities.h
stream_compaction/: CMakeLists.txt  common.h  cpu.cu  efficient.cu  naive.cu  thrust.cu
